<resources>
    <string name="app_name">Bird Watching</string>

    <string name="report">Report</string>

    <string name="search">Search</string>

    <string name="logout">Log Out</string>

    <string name="birdname">Bird Name:</string>

    <string name="useremail">User Email:</string>

    <string name="birdnamehint">Enter Bird Name</string>

    <string name="zipcode">Zip Code:</string>

    <string name="zipcodehint">Enter Zip Code</string>

    <string name="namehint">Enter Your Name</string>

    <string name="buttonsubmit">Submit</string>

    <string name="zipcodesearchhint">Enter Zip Code</string>

    <string name="searchbutton">Search</string>

    <string name="birdnameresult">Bird Name</string>

    <string name="personnameresult">Bird Finder</string>

    <string name="loginmessage">Please register and/or log in to continue.</string>

    <string name="emailhint">Enter Email</string>

    <string name="passwordhint">Enter Password</string>

    <string name="registerbutton">Register Account</string>

    <string name="loginbutton">Log In</string>

    <string name="addimportance">Add Importance</string>

    <string name="importanceheader">The most important bird sighting is</string>

    <string name="importancemenu">Most Important Sighting</string>



</resources>
